[package]
name = "everstake-spl-stake-pool"
version = "0.6.4"
description = "Solana Program Library Stake Pool"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3"
borsh = "0.10"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "~1.16"
mpl-token-metadata = { version = "3.0.1" }
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.8.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.1.0", features = [
    "no-entrypoint",
] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "~1.16"
solana-sdk = "~1.16"
solana-vote-program = "~1.16"

[lib]
crate-type = ["cdylib", "lib"]
